--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lucide-vue-next": "^0.561.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/blueimp-md5": "^2.18.2",
