--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.1",
+    "@types/leaflet": "^1.9.21",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.13.2",
     "blueimp-md5": "^2.19.0",
+    "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.561.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
