--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@vue-leaflet/vue-leaflet": "^0.10.1",
     "axios": "^1.13.2",
     "blueimp-md5": "^2.19.0",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "lucide-vue-next": "^0.561.0",
     "pinia": "^3.0.4",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@types/blueimp-md5": "^2.18.2",
+    "@types/file-saver": "^2.0.7",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^24.10.4",
     "@vercel/node": "^5.5.15",
